Fix wrapping issue on clip to folder menu's

--- a/app/assets/stylesheets/design/clipping_menus.css.scss
+++ b/app/assets/stylesheets/design/clipping_menus.css.scss
@@ -216,12 +216,12 @@
 
   #add-to-folder {
     position: relative;
-    width: 50px;
+    width: 55px;
     left: 0px;
     margin: 0;
   
     .button {
-      width: 50px;
+      width: 55px;
       height: 27px;
       left: 0px;
 
